http-routes/fitness-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-route 
  namespace: shubha-ns
spec:
  parentRefs:
    - name: k-gateway
  rules:
    - matches: 
        - path:
            type: PathPrefix
            value: /fitness
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: fitness-service
          port: 5000
