http-routes/flipkart-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flipkart-route
  namespace: shubha-ns
spec:
  parentRefs:
    - name: k-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /flipkart
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: eycart-service
          port: 3005
