http-routes/kyndrl-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kyndrl-route
  namespace: shubha-ns
spec:
  parentRefs:
    - name: k-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kyndrl
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: kyndrl-service
          port: 3003
