http-routes/transaction-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transaction-route
  namespace: shubha-ns
spec:
  parentRefs:
    - name: k-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /transaction
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: transaction-service
          port: 3003
